--- a/src/views/register-error.hbs
+++ b/src/views/register-error.hbs
@@ -1,7 +1,7 @@
-<div class="container text-center my-3">
-    <div class="jumbotron" style="background-color: salmon;color: white;">
+<div>
+    <div >
         <h1>USER ERROR SIGNUP</h1>
 
-        <button class="btn btn-warning my-5" onclick="location.href='/registrar'">VOLVER</button>
+        <button  onclick="location.href='/registrar'">VOLVER</button>
     </div>
 </div>
