--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -1,17 +1,17 @@
-<div class='container my-5'>
-  <div class='jumbotron'>
+<div >
+  <div >
 
     <h1>REGISTER</h1>
     <br />
     <form
-      class='form'
+     
       action='/register'
       method='post'
       role='form'
       autocomplete='off'
     >
 
-      <div class='form-group'>
+      <div>
         <input
           id='username'
           name='username'
@@ -22,7 +22,7 @@
         />
       </div>
 
-      <div class='form-group'>
+      <div >
         <input
           id='password'
           name='password'
@@ -34,15 +34,15 @@
       </div>
 
 
-      <div class='form-group'>
-        <input class='btn btn-success my-3' type='submit' value='Register' />
+      <div >
+        <input  type='submit' value='Register' />
       </div>
     </form>
 
     <hr />
 
-    <div class='text-left'>
-      <button class='btn btn-success my-3' onclick="location.href = '/login'">Ir
+    <div>
+      <button  onclick="location.href = '/login'">Ir
         a Login</button>
     </div>
 
